# probable-octo-goggles

./: MIGRATION_NOTES.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
spartan/: __main__.py  auth.py  cli.py  config.py  crawler.py  downloader.py  http_client.py  keyword_scanner.py  rate_limit.py  results.py  scanner.py  scope.py  state.py
spartan/detectors/: frontpage.py  sharepoint.py
spartan/output/: __init__.py
tests/: test_auth.py  test_cli.py  test_config.py  test_detectors.py  test_downloader.py  test_http_client.py  test_keyword_scanner.py  test_output.py  test_rate_limit.py  test_results.py  test_scanner.py  test_scope.py  test_state.py
