[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spartan"
version = "2.0.0"
description = "SharePoint and FrontPage security scanner"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "requests-ntlm>=1.3",
    "requests-kerberos",
    "beautifulsoup4>=4.12",
    "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
lxml = ["lxml"]

[project.scripts]
spartan = "spartan.__main__:main"

[tool.ruff]
target-version = "py313"
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
